Fit intro better

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<div id="intro">
 						<h1>GRUMPA<br />
 						BREWING</h1>
+						<p>KEEP COLD & STAY GRUMPY</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
