--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						BREWING</h1>
 						<p>KEEP COLD & STAY GRUMPY</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly"></a></li>
 						</ul>
 					</div>
 
