Add cap color and fix layout

--- a/beercheck.html
+++ b/beercheck.html
@@ -42,23 +42,27 @@
 								</header>
 								<h1 class="flag-font"><span class="flag-font" id="beer-type"></span></h1>
 								<div class="grid-container">
-									<div class="brew-date">
+									<div class="brew-date grid-item">
 										<h5>Brewed on</h5>
 										<p id="brew-date"></p>
 									</div>
-									<div class="bottle-date">
+									<div class="bottle-date grid-item">
 										<h5>Bottled on</h5>
 										<p id="bottle-date"></p>
 									</div>
-									<div class="abv">
+									<div class="cap-color grid-item">
+										<h5>Cap Color</h5>
+										<p id="cap-color"></p>
+									</div>
+									<div class="abv grid-item">
 										<h5>ABV</h5>
 										<p id="beer-abv"></p>
 									</div>
-									<div class="ibu">
+									<div class="ibu grid-item">
 										<h5>IBU</h5>
 										<p id="beer-ibu"></p>
 									</div>
-									<div class="grumpiness">
+									<div class="grumpiness grid-item">
 										<h5>Grumpiness</h5>
 										<p id="beer-grumpiness"></p>
 									</div>
