Replace Silver with Green

--- a/beercheck.html
+++ b/beercheck.html
@@ -85,8 +85,8 @@
 										<!-- <p>White</p> -->
 									</div>
 									<div class="cap-item">
-										<img class="cap-img" src="/images/cap_silver.png" onclick="showInfo('silver')">
-										<!-- <p>Silver</p> -->
+										<img class="cap-img" src="/images/cap_green.png" onclick="showInfo('green')">
+										<!-- <p>Green</p> -->
 									</div>
 								  </div>
 							</section>
