--- a/beercheck.html
+++ b/beercheck.html
@@ -88,6 +88,10 @@
 										<img class="cap-img" src="/images/cap_green.png" onclick="showInfo('green')">
 										<!-- <p>Green</p> -->
 									</div>
+									<div class="cap-item">
+										<img class="cap-img" src="/images/cap_red.png" onclick="showInfo('red')">
+										<!-- <p>Green</p> -->
+									</div>
 								  </div>
 							</section>
 							
