Update tag line

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>Get off my lawn!!</h2>
+									<h2>Stay off my lawn!!</h2>
 									<p>But since you're here, why don't you have a look around.</p>
 								</header>
 								<span class="image mid"><img src="images/face.png" /></span>
